feat: donations confirmations
