# app/domains/services/donations/donation.router.js
@@ -7,5 +7,9 @@ const donationController = require('./donation.controller');
 
 donationRouter.get('/entities', verifyToken, donationController.entities);
 donationRouter.get('/list', verifyToken, donationController.list);
+donationRouter.get('/list-as-sender', verifyToken, donationController.listAsSender);
+donationRouter.get('/list-as-receiver', verifyToken, donationController.listAsReceiver);
+donationRouter.post('/confirm-as-sender', verifyToken, donationController.confirmAsSender);
+donationRouter.post('/confirm-as-receiver', verifyToken, donationController.confirmAsReceiver);
 
 module.exports = donationRouter;
